tasksel (2.75) UNRELEASED; urgency=low

  * Split out <lang>-{kde,gnome}-desktop tasks. Closes: #431173
  * Add uim-applet-{kde,gnome} to the japanese desktop tasks, as
    Kenshi suggests.
  * Add libgl1-mesa-dri to the desktop task. Closes: #481464

 -- Joey Hess <joeyh@debian.org>  Wed, 14 May 2008 17:10:27 -0400

tasksel (2.74.1) unstable; urgency=low

  [ Frans Pop ]
  * Include task overrides file in uploads for byhand processing.

 -- Joey Hess <joeyh@debian.org>  Wed, 28 May 2008 18:07:43 -0400

tasksel (2.74) unstable; urgency=low

  [ Translations of debconf templates ]
  * Kurdish added. Closes: #479430
  * Belarusian added.

  [ Translations of programs ]
  * Kurdish added. Closes: #479432
  * Belarusian added.

  [ Translations of tasks ]
  * Galician updated
  * Swedish updated
  * Indonesian updated. Closes: #469948
  * Slovak updated
  * Belarusian added.

  [ Joey Hess ]
  * Add nvclock and toshset to laptop task. Closes: #471172
  * Add hpijs-ppds to print-server task. These ppds are recommended ones for
    many HP printers.
  * Add hp-ppd, to cover a few other HP printers.
  * Add openprinting-ppds, supporting a lot of postscript printers.
  * Add kerneloops to dekstop tasks. Closes: #475398
  * Re-add r2034; xorg is in testing.

  [ Eddy Petri?or ]
  * added iceweasel-l10n-ro to the romanian-desktop task

  [ Joey Hess ]
  * Fix enhances handling in the case where a task enhances another
    task that is not available, or not installable. The enhancing task 
    should not be installed in this case. Closes:# 481255
  * Move all packages out of Key for the korean task. It should be installed
    even if some are unavailable.

 -- Joey Hess <joeyh@debian.org>  Wed, 14 May 2008 17:07:03 -0400

tasksel (2.73) unstable; urgency=high

  * Revert r2034: "Remove discover1 and xresprobe from the desktop
    task. These are no longer used by xorg 1:7.3+10. Hallelujah!" until
    xorg is ready to go to testing and it shouldn't happen in time for