@@ -4,7 +4,7 @@ Priority: important
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Joey Hess <joeyh@debian.org>
 Standards-Version: 3.7.3
-Build-Depends: po-debconf, debhelper (>= 5), gettext, dpkg-dev (>= 1.9.0)
+Build-Depends: po-debconf, debhelper (>= 7), gettext, dpkg-dev (>= 1.9.0)
 Vcs-Svn: svn://svn.debian.org/tasksel/trunk
 
 Package: tasksel
